tests/ui/parser/missing-expression-in-for-loop.rs
fn main() {
    for i in {
        //~^ ERROR missing expression to iterate on in `for` loop
    }
}
